Bug #47944 ndb_mgmd config diff printout for larger numbers failure
Submitted: 9 Oct 14:46 Modified: 10 Oct 20:17
Reporter: Magnus Blaudd
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:7.0.9 OS:Any
Assigned to: Magnus Blaudd Target Version:

[9 Oct 14:46] Magnus Blaudd
Description:
Setting "DiskSyncSize=4294967039" in config.ini and doing a reload, shows the follwing
diff of the config change. The large unsigned value is printed like it was signed.

2009-10-09 11:50:30 [MgmtSrvr] INFO     -- Detected change of /home/ms221938/config.ini
on
disk, will try to set it when all ndb_mgmd(s) started. This is the actual diff:
[ndbd(DB)]
NodeId=3
-DiskSyncSize=4194304
+DiskSyncSize=-2147483648

[ndbd(DB)]
NodeId=4
-DiskSyncSize=4194304
+DiskSyncSize=-2147483648

How to repeat:
.

Suggested fix:
.
[9 Oct 14:48] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/86349
[9 Oct 16:20] Bugs System
Pushed into 5.1.39-ndb-7.0.9 (revid:magnus.blaudd@sun.com-20091009141821-rrrm9xm2j8f3hstt)
(version source revid:magnus.blaudd@sun.com-20091009141821-rrrm9xm2j8f3hstt) (merge vers:
5.1.39-ndb-7.0.9) (pib:13)
[9 Oct 16:27] Bugs System
Pushed into 5.1.39-ndb-7.1.0 (revid:magnus.blaudd@sun.com-20091009142206-4g25a32akb8t3o5u)
(version source revid:magnus.blaudd@sun.com-20091009142206-4g25a32akb8t3o5u) (merge vers:
5.1.39-ndb-7.1.0) (pib:13)
[10 Oct 20:17] Jon Stephens
Documented bugfix in the NDB-7.0.9 changelog as follows:

        After changing the value of DiskSyncSize to 4294967039 (the
        maximum) in the config.ini file and reloading the configuration,
        the new value was displayed in the update information written in
        the cluster log as a signed number insteas of unsigned.

Closed.