Bug#47944 ndb_mgmd config diff printout for larger numbers failure  - Fix format specifier to printout the unisgned number as unsigned